--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.2",
     "antd": "^4.21.4",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -19,6 +21,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "sass": "^1.53.0",
     "tailwindcss": "^3.1.4",
     "vite": "^2.9.9"
   }
